# whale-watch

./: .gitignore  CMakeLists.txt
api/: Dockerfile  app.py  requirements.txt
api/services/: db.py  queries.py
backend/: CMakeLists.txt  Dockerfile
backend/include/config/: ConfigManager.h
backend/include/db/: DatabaseManager.h
backend/include/parsers/: BlockParser.h
backend/include/providers/: EthereumProvider.h  IChainProvider.h
backend/include/services/: BlockScanner.h  WhaleTracker.h
backend/include/utils/: HexUtils.h  Logger.h  RetryUtils.h
backend/src/: main.cpp
backend/src/config/: ConfigManager.cpp
backend/src/db/: Database_Manager.cpp
backend/src/parsers/: BlockParser.cpp
backend/src/providers/: EthereumProvider.cpp
backend/src/services/: BlockScanner.cpp  WhaleTracker.cpp
backend/src/utils/: HexUtils.cpp  HttpClient.cpp  JsonWrapper.cpp  RetryUtils.cpp
include/models/: Block.h  Transaction.h
include/parsers/: TransactionParser.h
include/services/: BlockScanner.h  WhaleTracker.h
include/utils/: HexUtils.h  HttpClient.h  JsonWrapper.h
scripts/: init.sql  purge_old_data.py
src/: main.cpp
src/parsers/: BlockParser.cpp  TransactionParser.cpp
src/providers/: EthereumProvider.cpp
src/services/: BlockScanner.cpp  WhaleTracker.cpp
src/utils/: HexUtils.cpp  JsonWrapper.cpp  Logger.cpp
whale-dashboard/: package-lock.json  package.json
whale-dashboard/src/: App.tsx
whale-dashboard/src/pages/: Dashboard.tsx
